src/main/k8s/kafka-deployment.yml
apiVersion: apps/v1
kind: StatefulSet
#https://stackoverflow.com/questions/47516355/multi-broker-kafka-on-kubernetes-how-to-set-kafka-advertised-host-name
metadata:
  name: kafka-broker
spec:
  selector:
    matchLabels:
      app: kafka-broker
  serviceName: kafka-cluster
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: Parallel
  template:
    metadata:
      labels:
        app: kafka-broker
    spec:
      terminationGracePeriodSeconds: 15
      containers:
        - name: kafka
          image: wurstmeister/kafka:2.12-2.5.0
          ports:
            - containerPort: 9092
