src/main/k8s/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-kafka-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-kafka-api
  template:
    metadata:
      labels:
        app: demo-kafka-api
    spec:
      containers:
        - name: demo-kafka-api
          image: demo-kafka-api
          imagePullPolicy: Never
          #imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            failureThreshold: 1
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            failureThreshold: 30
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            failureThreshold: 30
            periodSeconds: 10
          volumeMounts:
            - name: demo-kafka-api-config
              mountPath: /app/config
      volumes:
        - name: demo-kafka-api-config
          configMap:
            name: demo-kafka-api-config
---
apiVersion: v1
kind: Service
metadata:
  name: demo-kafka-api
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
  selector:
    app: demo-kafka-api
