src/main/k8s/kafka-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-broker
  labels:
    app: kafka-broker
spec:
  type: ClusterIP
  ports:
    - name: client-port
      port: 9092
      protocol: TCP
      targetPort: 9092
  selector:
    app: kafka-broker
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-broker-0
  labels:
    app: kafka-broker
spec:
  type: ClusterIP
  ports:
    - name: client-port
      port: 9092
      protocol: TCP
      targetPort: 9092
  selector:
    statefulset.kubernetes.io/pod-name: kafka-broker-0
