src/main/k8s/ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-kafka-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-kafka-ui
  template:
    metadata:
      labels:
        app: demo-kafka-ui
    spec:
      containers:
        - name: demo-kafka-ui
          image: demo-kafka-ui
          imagePullPolicy: Never
          #imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: demo-kafka-ui
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
  selector:
    app: demo-kafka-ui
