src/main/k8s/zookeeper-service.yml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  labels:
    app: zookeeper
spec:
  type: ClusterIP
  ports:
    - name: client-port
      port: 2181
      protocol: TCP
      targetPort: 2181
  selector:
    app: zookeeper
