src/main/k8s/demo-kafka-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-kafka
  template:
    metadata:
      labels:
        app: demo-kafka
    spec:
      containers:
        - name: demo-kafka
          image: demo-kafka
          imagePullPolicy: Never
          #imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            failureThreshold: 1
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            failureThreshold: 30
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            failureThreshold: 30
            periodSeconds: 10
          volumeMounts:
            - name: demo-kafka-config
              mountPath: /app/config
      volumes:
        - name: demo-kafka-config
          configMap:
            name: demo-kafka-config
---
apiVersion: v1
kind: Service
metadata:
  name: demo-kafka
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
  selector:
    app: demo-kafka
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo-kafka-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: demo-kafka.local
      http:
        paths:
          - path: /
            backend:
              serviceName: demo-kafka
              servicePort: 8080
