src/main/k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo-kafka-ingress
spec:
  rules:
    - host: demo-kafka.minikube
      http:
        paths:
          - path: /api
            backend:
              serviceName: demo-kafka-api
              servicePort: 8080
          - path: /ui
            backend:
              serviceName: demo-kafka-ui
              servicePort: 80
